smithy-model/src/test/resources/software/amazon/smithy/model/loader/valid/apply/block-apply-statement.smithy
$version: "1.1"
namespace smithy.example

structure Foo {
    baz: String,
}

apply Foo$baz {
    @documentation("Hi")
    @sensitive
    @deprecated
}
