smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/traits/trait-trailing.smithy
// Syntax error at line 8, column 1: Expected IDENTIFIER but found RBRACE('}') | Model
namespace com.foo

structure Foo {
  baz: String,

  @deprecated
}
